--- a/spring-boot-hello-docker/pom.xml
+++ b/spring-boot-hello-docker/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.4</version>
-		<relativePath/> 
+		<relativePath/>
 	</parent>
 	<groupId>com.docker</groupId>
 	<artifactId>spring-boot-hello-docker</artifactId>
@@ -49,6 +49,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-hello-docker</finalName>
 	</build>
 
 </project>
